[benchmark] Refactor code by adding ui.js for benchmark test.

--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -187,6 +187,7 @@
     <script src='../examples/semantic_segmentation/src/GuidedFilter.js'></script>
     <script src="../examples/semantic_segmentation/src/DrawOutputs.js"></script>
     <script src='../examples/static/lib/jquery/jquery.min.js'></script>
+    <script src="ui.js"></script>
     <script src="utils.js"></script>
     <script src="utils_ic.js"></script>
     <script src="utils_od.js"></script>
