[tool] Fixed code match (code scan) issue for jquery-3.2.1.slim.min.js.

--- a/test/tools/MeasureAccuracy/index.html
+++ b/test/tools/MeasureAccuracy/index.html
@@ -160,7 +160,7 @@
       </div>
 
     </div>
-    <script src="resources/third_party/jquery-3.3.1.min.js"></script>
+    <script src="resources/third_party/jquery.min.js"></script>
     <script src="resources/third_party/popper.min.js"></script>
     <script src="resources/third_party/bootstrap.min.js"></script>
     <script src="resources/third_party/iro.min.js"></script>
