[benchmark] Supported Inception V3 / V4 quant models.

--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -55,7 +55,9 @@
               <option class="image_classification" >MobileNet v2 Quant (TFLite)</option>
               <option class="image_classification" >SqueezeNet (TFLite)</option>
               <option class="image_classification" >Inception v3 (TFLite)</option>
+              <option class="image_classification" >Inception v3 Quant (TFLite)</option>
               <option class="image_classification" >Inception v4 (TFLite)</option>
+              <option class="image_classification" >Inception v4 Quant (TFLite)</option>
               <option class="image_classification" >Inception ResNet v2 (TFLite)</option>
               <option class="image_classification" >MobileNet v2 (ONNX)</option>
               <option class="image_classification" >SqueezeNet (ONNX)</option>
