--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -422,6 +422,7 @@
   <script src='../third_party/protobuf.min.js'></script>
   <script src='../../dist/webml-polyfill.js'></script>
   <script src='../util/base.js'></script>
+  <script src='../util/preprocess_utils.js'></script>
   <script src='../util/tflite/flatbuffers/js/flatbuffers.js'></script>
   <script src='../util/tflite/schema/schema_generated.js'></script>
   <script src='../util/tflite/TfLiteModelUtils.js'></script>
