Add Service Worker for examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -449,6 +449,20 @@
   <script src='static/lib/stickyjs/sticky.js'></script>
   <script src='static/js/ui.common.js'></script>
 
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('/webml-polyfill/sw.js').then(function(registration) {
+          // Registration was successful
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        }, function(err) {
+          // registration failed :(
+          console.log('ServiceWorker registration failed: ', err);
+        });
+      });
+    }
+  </script>
+
 </body>
 
 </html>
