[example] Ensure the test images with license

--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -261,7 +261,7 @@
               <figure class='item'>
                 <div class='inner'>
                   <img id='image' crossorigin='anonymous' class='img-fluid' alt='Responsive image'
-                    src='./img/bee_eater.jpg'>
+                    src='./img/test.jpg'>
                 </div>
               </figure>
               <div class='row mt-1'>
