[benchmark]modify some issues of coding style in benchmark

--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -87,6 +87,10 @@
               <option class="facial_landmark_detection" >Tiny Yolo v2 (TFlite)</option>
               <option class="super_resolution" >SRGAN 96x4 (TFLite)</option>
               <option class="super_resolution" >SRGAN 128x4 (TFLite)</option>
+              <option class="emotion_analysis" >SSD MobileNet v1 (TFlite)</option>
+              <option class="emotion_analysis" >SSD MobileNet v2 (TFlite)</option>
+              <option class="emotion_analysis" >SSDLite MobileNet v2 (TFlite)</option>
+              <option class="emotion_analysis" >Tiny Yolo v2 (TFlite)</option> 
             </select>
           </div>
           <div>
@@ -153,6 +157,7 @@
               <img id='segmentationImage' hidden crossorigin='anonymous' class='img-fluid' alt='Responsive image' src='../examples/semantic_segmentation/img/woman.jpg'>
               <img id='facialLandmarkDetectionImage' hidden crossorigin='anonymous' class='img-fluid' alt='Responsive image' src='../examples/facial_landmark_detection/img/image1.jpg'>
               <img id='superImage' hidden crossorigin='anonymous' class='img-fluid' alt='Responsive image' src='../examples/super_resolution/img/mushroom.png'>
+              <img id='emotionanalysisImage' hidden crossorigin='anonymous' class='img-fluid' alt='Responsive image' src='../examples/emotion_analysis/img/image1.jpg'>
             </div>
             <div class="col">
             </div>
@@ -207,6 +212,7 @@
     <script src="utils_ss.js"></script>
     <script src="utils_fld.js"></script>
     <script src="utils_sr.js"></script>
+    <script src="utils_em.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
