[benchmark]add emotion_analysis code in index.html

--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -212,7 +212,7 @@
     <script src="utils_ss.js"></script>
     <script src="utils_fld.js"></script>
     <script src="utils_sr.js"></script>
-    <script src="utils_em.js"></script>
+    <script src="utils_ea.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
