[Example] Progress Stepper Improvement

--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -284,6 +284,7 @@
     <div class='container'>
       <div class='row'>
         <div class='col-lg-12 col-xs-12 text-lg-center text-center'>
+          <div id='trademark' class='mb-4'></div>
           <div class='webmlbadge mb-4'>
             <div class='webml-title'>WebNN API</div>
             <div id='webmlstatus'></div>
