--- a/examples/facial_landmark_detection/index.html
+++ b/examples/facial_landmark_detection/index.html
@@ -286,6 +286,7 @@
     <div class='container'>
       <div class='row'>
         <div class='col-lg-12 col-xs-12 text-lg-center text-center'>
+          <div id='trademark' class='mb-4'>TensorFlow, the TensorFlow logo and any related marks are trademarks of Google Inc.</div>
           <div class='webmlbadge mb-4'>
             <div class='webml-title'>WebNN API</div>
             <div id='webmlstatus'></div>
