--- a/examples/skeleton_detection/index.html
+++ b/examples/skeleton_detection/index.html
@@ -87,8 +87,8 @@
             <th class='text-center backendtitle'>Backend</th>
             <td>
               <div class='custom-control custom-switch'>
-                  <input type='checkbox' class='custom-control-input' id='backendswitch'>
-                  <label class='custom-control-label' for='backendswitch'>Dual</label>
+                <input type='checkbox' class='custom-control-input' id='backendswitch'>
+                <label class='custom-control-label' for='backendswitch'>Dual</label>
               </div>
               <div class='g b-polyfill'>
                 <span id='backendpolyfilltitle'>Polyfill</span>
@@ -111,7 +111,102 @@
           <tr id='option' style='display: none;'>
             <th class='text-center'>Option</th>
             <td>
-              <div id='my-gui-container'></div>
+              <div id="my-gui-container">
+                <div class="dg main a" id="gui">
+                  <div></div>
+                  <ul class="closed" style="height: auto;">
+                    <li class="cr number">
+                      <div><span class="property-name"
+                          title="Model: The larger the value, the larger the size of the layers, and more accurate the model at the cost of speed.">model</span>
+                        <div class="c">
+                          <select id="sdmodel">
+                            <option value="1">1</option>
+                            <option value="0.5">0.5</option>
+                            <option value="0.75">0.75</option>
+                            <option value="1.01" selected="selected">1.01</option>
+                          </select>
+                          <div class="select__arrow"></div>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="cr number">
+                      <div><span class="property-name"
+                          title="OutputStride: The desired stride for the output decides output dimension of model. The higher the number, the faster the performance but slower the accuracy. ">Stride</span>
+                        <div class="c">
+                          <select id="sdstride">
+                            <option value="8">8</option>
+                            <option value="16" selected="selected">16</option>
+                            <option value="32">32</option>
+                          </select>
+                          <div class="select__arrow"></div>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="cr number">
+                      <div><span class="property-name"
+                          title="ScaleFactor: Scale down the image size before feed it through model, set this number lower to scale down the image and increase the speed when feeding through the network at the cost of accuracy.">Scale</span>
+                        <div class="c">
+                          <select id="scalefactor">
+                            <option value="1">1</option>
+                            <option value="0.25">0.25</option>
+                            <option value="0.5" selected="selected">0.5</option>
+                            <option value="0.75">0.75</option>
+                          </select>
+                          <div class="select__arrow"></div>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="cr number has-slider">
+                      <div><span class="property-name"
+                          title="ScoreThreshold: Score (0.0 ~ 1.0) is the probability of keypoint and pose, set score threshold higher to reduce the number of poses to draw on image and visa versa.">Threshold</span>
+                        <div class="c">
+                          <div><input id="sdscorethreshold" type="text" value="0.15"></div>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="folder">
+                      <div class="dg">
+                        <ul>
+                          <li class="title">Multi Pose Estimation</li>
+                          <li class="cr number has-slider">
+                            <div><span class="property-name"
+                                title="NmsRadius: The minimal distance value (0 ~ 40) between two poses under multiple poses situation. The smaller this value, the poses in image are more concentrated.">Radius</span>
+                              <div class="c">
+                                <div><input id="sdnmsradius" type="number" value="20" min="1" max="40">
+                                </div>
+                              </div>
+                            </div>
+                          </li>
+                          <li class="cr number has-slider">
+                            <div><span class="property-name"
+                                title="MaxDetections: The maximul number (1 ~ 20)  of poses to be detected in multiple poses situation.">Detections</span>
+                              <div class="c">
+                                <div><input id="sdmaxdetections" type="number" value="15" min="1" max="20">
+                                </div>
+                              </div>
+                            </div>
+                          </li>
+                        </ul>
+                      </div>
+                    </li>
+                    <li class="cr boolean">
+                      <div><span class="property-name" title="ShowPose">Pose</span>
+                        <div class="c"><input id="sdshowpose" type="checkbox" checked="checked"><label class=""></label></div>
+                      </div>
+                    </li>
+                    <li class="cr boolean">
+                      <div><span class="property-name" title="ShowBoundingBox">Bounding</span>
+                        <div class="c"><input id="sdshowboundingbox" type="checkbox"><label class=""></label></div>
+                      </div>
+                    </li>
+                    <li class="cr boolean">
+                      <div><span class="property-name" title="UseAtrousConvOps">AtrousConv</span>
+                        <div class="c"><input id="sduseatrousconvops" type="checkbox" checked="checked"><label class=""></label></div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </td>
           </tr>
           <tr class='offload' style='display:none'>
@@ -218,7 +313,7 @@
                   <label for='input'><svg width='20' height='17' viewBox='0 0 20 17'>
                       <path
                         d='M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z' />
-                      </svg>
+                    </svg>
                     <span>Pick Image</span>
                   </label>
                 </div>
@@ -253,8 +348,8 @@
             <video id='video' autoplay playsinline hidden></video>
             <canvas hidden id='scalevideo' width='640' height='480'></canvas>
             <div id='cameraswitcher' class='custom-control custom-switch'>
-                <input type='checkbox' class='custom-control-input' id='cameraswitch'>
-                <label class='custom-control-label' for='cameraswitch'>Front-facing</label>
+              <input type='checkbox' class='custom-control-input' id='cameraswitch'>
+              <label class='custom-control-label' for='cameraswitch'>Front-facing</label>
             </div>
           </div>
         </div>
@@ -334,7 +429,6 @@
   <script src='../static/lib/stickyjs/sticky.js'></script>
   <script src='../static/lib/greensock/tweenmax.js'></script>
   <script src='../third_party/stats.customized.min.js'></script>
-  <script src='../third_party/dat.gui.js'></script>
 
   <script src='../../dist/webml-polyfill.js'></script>
   <script src='../util/base.js'></script>
