Netron with WebNN support status - Version 1.0

--- a/netron/index.html
+++ b/netron/index.html
@@ -49,7 +49,7 @@
         </div>
     </div>
     <div id='welcome' class='background' style='display: block'>
-        <a class='center logo' href='https://github.com/lutzroeder/netron' target='_blank'>
+        <a class='center logo' href='https://intel.github.io/webml-polyfill/netron' target='_blank'>
             <svg xmlns='http://www.w3.org/2000/svg' class='logo absolute' width='128' height='128'
                 viewbox='0 0 1024 1024'>
                 <circle class='stroke' cx='512' cy='512' r='431' fill='none' stroke-width='32'></circle>
