Add five backend options for simple model example

--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -3,7 +3,35 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>WebML Simple Model</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">    
+    <link rel="stylesheet" href="../static/lib/bootstrap/css/bootstrap.min.css">   
+    <style>
+		.radioInit{
+			display: none;
+		}
+		.radioSelected{
+			display: inline-block;
+			width:30px;
+			height:30px;
+			border:2px solid lightskyblue;
+			border-radius:100%;
+			margin-right:8px;
+      position:relative;
+			vertical-align: middle;
+
+		}
+		.radioInit:checked + .radioSelected:after{
+			content:"";
+			display: inline-block;
+			width:22px;
+			height:22px;
+			background:lightskyblue;
+			border-radius:100%;
+			margin-top:2px;
+		}
+		.radioInit:checked + .radioSelected{
+			border:2px solid rgb(21, 133, 202);
+		}
+	  </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="width:100%">
@@ -52,6 +80,41 @@
         <div class="col">
         </div>
       </div>
+       <div class="row" style="margin-top:50px;">
+       <div class="col"> </div>
+       <div class="col-8" align="center">
+      <label style="color: brown">Polyfill:</label>
+      <label>
+        <input id="isWebGL" type="radio" name="Backend" class="radioInit" value="WebGL" checked="checked">
+        <span class="radioSelected"></span>WebGL</label>
+
+      <label>
+        <input id="isWASM" type="radio" name="Backend" class="radioInit" value="WASM">
+        <span class="radioSelected"></span>WASM</label>
+     
+      </div>
+      <div class="col"></div>
+      </div>
+
+       <div class="row" style="margin-top:20px;">
+       <div class="col"> </div>
+       <div class="col-8" align="center">
+      <label style="color: brown">WebNN:</label>
+      <label>
+        <input id="isPREFER_SUSTAINED_SPEED" type="radio" name="Backend" class="radioInit" value="PREFER_SUSTAINED_SPEED">
+        <span class="radioSelected"></span>SUSTAINED_SPEED</label>
+        <label>
+        <input id="isPREFER_FAST_SINGLE_ANSWER" type="radio" name="Backend" class="radioInit" value="PREFER_FAST_SINGLE_ANSWER">
+        <span class="radioSelected"></span>FAST_SINGLE_ANSWER</label>
+      <label>
+        <input id="isPREFER_LOW_POWER" type="radio" name="Backend" class="radioInit" value="PREFER_LOW_POWER">
+        <span class="radioSelected"></span>LOW_POWER</label>
+
+
+      </div>
+      <div class="col"></div>
+      </div>
+      
       <div class="row" style="margin-top:50px;">
         <div class="col">
         </div>
