--- a/examples/index.html
+++ b/examples/index.html
@@ -71,6 +71,7 @@
               <li><a href='facial_landmark_detection/'>Facial Landmark Detection</a></li>
               <li><a href='super_resolution/'>Super Resolution</a></li>
               <li><a href='emotion_analysis/'>Emotion Analysis</a></li>
+              <li><a href='speech_commands/'>Speech Commands</a></li>
             </ul>
           </li>
           <li><a href='model.html'>Models</a></li>
