--- a/examples/semantic_segmentation/index.html
+++ b/examples/semantic_segmentation/index.html
@@ -64,14 +64,14 @@
         <ul class='nav-menu'>
           <li class='menu-has-children'><a href='../'>Examples</a>
             <ul>
-              <li><a href='image_classification/'>Image Classification</a></li>
-              <li><a href='object_detection/'>Person/Object Detection</a></li>
-              <li><a href='semantic_segmentation/'>Semantic Segmentation</a></li>
-              <li><a href='skeleton_detection/'>Skeleton Detection</a></li>
-              <li><a href='facial_landmark_detection/'>Facial Landmark Detection</a></li>
-              <li><a href='super_resolution/'>Super Resolution</a></li>
-              <li><a href='emotion_analysis/'>Emotion Analysis</a></li>
-              <li><a href='speech_commands/'>Speech Commands</a></li>
+              <li><a href='../image_classification/'>Image Classification</a></li>
+              <li><a href='../object_detection/'>Person/Object Detection</a></li>
+              <li><a href='../semantic_segmentation/'>Semantic Segmentation</a></li>
+              <li><a href='../skeleton_detection/'>Skeleton Detection</a></li>
+              <li><a href='../facial_landmark_detection/'>Facial Landmark Detection</a></li>
+              <li><a href='../super_resolution/'>Super Resolution</a></li>
+              <li><a href='../emotion_analysis/'>Emotion Analysis</a></li>
+              <li><a href='../speech_commands/'>Speech Commands</a></li>
             </ul>
           </li>
           <li><a href='../model.html'>Models</a></li>
